# imxrt-tools

./: Cargo.toml  README.md
ocotp/: Cargo.toml
ocotp/src/: lib.rs
