# SPDX-License-Identifier: MPL-2.0
# SPDX-FileCopyrightText: Copyright 2024 Ian McIntyre

[workspace]
resolver = "2"
members = ["ccm-obs", "ocotp", "tools"]

[workspace.package]
license = "MPL-2.0"
repository = "https://github.com/mciantyre/imxrt-debug-tools"
edition = "2021"
publish = false
authors = ["Ian McIntyre <me@mciantyre.dev>"]

[workspace.dependencies]
ccm-obs = { path = "ccm-obs" }
ocotp = { path = "ocotp" }

clap = { version = "4.5.20" }
probe-rs = { version = "0.29.1" }
