# SPDX-License-Identifier: MPL-2.0
# SPDX-FileCopyrightText: Copyright 2026 Ian McIntyre

[package]
name = "ocotp"
version = "0.1.0"
license.workspace = true
repository.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
probe-rs = { workspace = true }
